Update freedom.md